# CodeRoblox

./: .gitignore  Makefile  README.md  implementation_plan.md  mise.toml  plugin.project.json  pyproject.toml  stylua.toml
.github/workflows/: ci.yml
plugin/src/: Main.server.luau
plugin/src/Plugin/: AgentClient.luau  HttpClient.luau  InstancePath.luau  OperationApplier.luau  Settings.luau  SnapshotBuilder.luau
plugin/src/Shared/: OperationPreview.luau  PathUtils.luau  Protocol.luau
plugin/tests/: PathUtils.spec.luau  Protocol.spec.luau  run_tests.luau
scripts/: run_agent.py
src/coderoblox_agent/: __init__.py  models.py  server.py  service.py
tests/: test_server.py  test_service.py
